--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "eslint": "^8.14.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
+    "miragejs": "^0.1.43",
     "prettier": "^2.6.2"
   },
   "lint-staged": {
